public enum TYPE_ABONNEMENT {
    SOLO, DUO, FAMILLE
}
