package ressource;

public class BandeAnnonce {
    private String url;

    public BandeAnnonce(String url) {
        this.url = url;
    }

    public String getUrl() {
        return url;
    }

}
