package ressource.types;

public enum TYPE_DOCUMENTAIRE {
    HISTOIRE,
    SCIENCE,
    NATURE,
    CUISINE,
    ART,
    POLITIQUE,
    SPORT,
    MUSIQUE,
    CINEMA
}
