package ressource.types;

public enum TYPE_FILM_SERIE {
    COMEDIE,
    DRAME,
    ACTION,
    HORREUR,
    SCIENCE_FICTION,
    ANIMATION,
    AVENTURE,
    THRILLER,
    FANTASTIQUE
}
