@startuml

title Projet Netflix - Diagramme de Classe

class Netflix << (S,#FF7700) Singleton >>{
    {static} - instance: Netflix
    {static} - listeUtilisateur: List<Utilisateur>
    {static} - listeRessource: List<Ressource>
    {static} + getInstance(): Netflix
    + ajouterUtilisateur(utilisateur: Utilisateur): void
    + ajouterRessource(ressource: IRessource): void
    + getUtilisateur(email: string): Utilisateur
    + init(): void
    + getListeRessource(): List<IRessource>
    + getRessource(String nom): IRessource
    + printFavoris(Utilisateur utilisateur): String
    + printLectures(Utilisateur utilisateur): String
}

Netflix *-- "0..*" Utilisateur
Netflix *-- "0..*" IRessource

/'
---- Définition des Ressources ----
'/

enum TYPE_FILM_SERIE {
    COMEDIE
    DRAME
    ACTION
    HORREUR
    SCIENCE_FICTION
    ANIMATION
    AVENTURE
    THRILLER
    FANTASTIQUE
}

enum TYPE_DOCUMENTAIRE{
    HISTOIRE
    SCIENCE
    NATURE
    CUISINE
    ART
    POLITIQUE
    SPORT
    MUSIQUE
    CINEMA
}

class BandeAnnonce{
    - url: string
    + getUrl(): string
}

interface IRessource{
    + getNom(): string
    + getDescription(): string
    + getAgeMin(): integer
    + getSortie(): date
    + getBandeAnnonce(): BandeAnnonce
    + play(demarrage: int): void
    + toString(): string
}

note "on pourrait faire une classe Acteur" as acteur
acteur .. Film

abstract Ressource {
    - nom: string
    - description: string
    - age_min: integer
    - duree: integer
    - sortie: date
}

Ressource "0..*" -- "1" BandeAnnonce
class Ressource implements IRessource

class Film{
    - acteurs: string
    - type: TYPE_FILM_SERIE
    + getActeurs(): string
    + getType(): TYPE_FILM_SERIE
}

class Documentaire{
    - type: TYPE_DOCUMENTAIRE
    + getType(): TYPE_DOCUMENTAIRE
}

class Serie{
    - nbSaisons: integer
    - nbEpisodes: integer
    - type: TYPE_FILM_SERIE
    + getNbSaisons(): integer
    + getNbEpisodes(): integer
    + getType(): TYPE_FILM_SERIE
    + play(demarrage: int): void //@Override
    + toString(): string //@Override
}

class Episode{
    - numero: integer
    - saison: integer
    {static} DUREE: integer
    + getNumero(): integer
    + getSaison(): integer
    + play(demarrage: int): void
}

Serie *-- "0..*" Episode
Serie -- "1" Episode : "episode courant"

class Film extends Ressource
class Documentaire extends Ressource
class Serie extends Ressource

/'
---- Définition des Utilisateurs ----
'/

enum TYPE_ABONNEMENT{
    SOLO
    DUO
    FAMILLE
}

class Abonnement{
    - type: TYPE_ABONNEMENT
    - dateDebut: date
    - dateFin: date
    + getType(): TYPE_ABONNEMENT
    + getDateDebut(): date
    + getDateFin(): date
}

class Utilisateur{
    - email: string
    - dateNaissance: date
    - motDePasse: string
    - rib: string
    + getEmail(): stringSoprp
    + getDateNaissance(): date
    + getMotDePasse(): string
    + getRib(): string
    + changerMotDePasse(motDePasse: string): void
    + resilierAbonnement(): void
    + void souscrireAbonnement(abonnement: Abonnement): void
    + ajouterFavoris(ressource: Ressource): void
    + supprimerFavoris(ressource: Ressource): void
    + getFavori(): List<IRessource>
    + ajouterLecture(ressource: Ressource): void
    + supprimerLecture(ressource: Ressource): void
    + getLecture(): List<IRessource>
}

Utilisateur "0..*" -- "0..*" IRessource : "liste de favoris"
Utilisateur "0..*" -- "0..*" IRessource : "liste de lecture"
Utilisateur "0..*" -- "1" Abonnement

@enduml
